[bug 808594] Tweak list and nested list styles on mobile.

--- a/media/less/mobile/wiki.less
+++ b/media/less/mobile/wiki.less
@@ -146,6 +146,28 @@
       max-width: 100%;
     }
 
+    ul,
+    ol,
+    dl {
+      margin: 0 0 1em 1.5em;
+      padding: 0;
+
+      li {
+        margin: 6px 0;
+        padding: 0;
+
+        p {
+          margin: 0;
+        }
+
+        ol,
+        ul,
+        dl {
+          margin: 0 0 0 6px;
+        }
+      }
+    }
+
     .note,
     #toc {
       background: #eef2f5;
